...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/note_comment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/icon_comment"
            android:background="?attr/selectableItemBackground"
...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/note_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/icon_edit"
            android:background="?attr/selectableItemBackground"
...
