<?xml version="1.0" encoding="utf-8"?>
<org.wikipedia.onboarding.OnboardingPageView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inflate_features_onboarding_page_zero"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:centeredImage="@drawable/illustration_app_onboarding_0"
    app:imageSize="160dp"
    app:primaryText="@string/features_onboarding_welcome_title"
    app:secondaryText="@string/features_onboarding_welcome_text" />