<?xml version="1.0" encoding="utf-8"?>
<org.wikipedia.onboarding.OnboardingPageView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inflate_features_onboarding_page_six"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:centeredImage="@drawable/ic_illustration_app_onboarding_1_alt"
    app:imageSize="160dp"
    app:primaryText="@string/features_onboarding_feature_six_title"
    app:secondaryText="@string/features_onboarding_feature_six_text" />